--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.58.0",
     "dayjs": "^1.11.10",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "tailwindcss-neumorphism": "^0.1.0",
     "undici": "^6.4.0"
   },
